--- a/app/assets/stylesheets/main/time_tables.css.scss
+++ b/app/assets/stylesheets/main/time_tables.css.scss
@@ -24,7 +24,7 @@
 
         .title{ font-weight: bold; }            
         
-        .excluded_date, .overlap_date, .selected_date, .selected_period{
+        .excluded_date, .overlaped_date, .selected_date, .selected_period{
             margin-left: 20px;
             margin-right: 5px;
         }
